# imap_error_mail_analyzer

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  config.example.json  pyproject.toml
.claude/: settings.json
.serena/: project.yml
Documents/: release.md  システム仕様.md
src/imap_error_mail_analyzer/: __init__.py  main.py
src/imap_error_mail_analyzer/modules/: bounce_parser.py  cache.py  cli.py  config.py  html_report.py  imap_client.py  ollama_client.py  report.py
src/imap_error_mail_analyzer/utils/: categories.py  date_utils.py  email_utils.py  logger.py
